force-app/main/default/objects/Student__c/Student__c.object-meta.xml
<CustomObject>
    <description>Graduate students visit institute for course</description>
    <label>Student</label>
    <nameField>
        <displayFormat>Stud-{0000}</displayFormat>
        <label>Graduate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>