force-app/main/default/objects/Student__c/fields/Age_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Age_in_Months__c</fullName>
    <formula>FLOOR(MOD((TODAY()- DOB__c ),365.2425)/30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>