force-app/main/default/objects/Student__c/fields/Candidate_name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_name__c</fullName>
    <label>Candidate name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>