force-app/main/default/objects/Student__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Warangal</fullName>
            </value>
            <value>
                <fullName>khammam</fullName>
            </value>
            <value>
                <fullName>Kurnool</fullName>
            </value>
            <value>
                <fullName>Nandyal</fullName>
            </value>
            <value>
                <fullName>Pulivendula</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Nagpur</fullName>
            </value>
            <value>
                <fullName>Munnar</fullName>
            </value>
            <value>
                <fullName>Kochi</fullName>
            </value>
            <value>
                <fullName>varkala</fullName>
            </value>
            <value>
                <fullName>Tampa</fullName>
            </value>
            <value>
                <fullName>Miami</fullName>
            </value>
            <value>
                <fullName>Destin</fullName>
            </value>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Augusta</fullName>
            </value>
            <value>
                <fullName>Helen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>