force-app/main/default/objects/Student__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <label>Doctor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heart</fullName>
            </value>
            <value>
                <fullName>Lung</fullName>
            </value>
            <value>
                <fullName>Gyno</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
            </value>
            <value>
                <fullName>Neuro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>