force-app/main/default/objects/Student__c/fields/Doctor_fees__c.field-meta.xml
<CustomField>
    <fullName>Doctor_fees__c</fullName>
    <label>Doctor_fees</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>