force-app/main/default/objects/Student__c/fields/Final_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Amount__c</fullName>
    <formula>Course__r.Fees__c  * 0.85</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>