force-app/main/default/objects/Student__c/fields/Placement_info__c.field-meta.xml
<CustomField>
    <fullName>Placement_info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement info</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipName>Graduates</relationshipName>
    <type>Lookup</type>
</CustomField>