force-app/main/default/objects/Student__c/fields/Schlarship__c.field-meta.xml
<CustomField>
    <fullName>Schlarship__c</fullName>
    <label>Schlarship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>