force-app/main/default/objects/Student__c/fields/Telangana_State__c.field-meta.xml
<CustomField>
    <fullName>Telangana_State__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telangana State</label>
    <type>Checkbox</type>
</CustomField>