force-app/main/default/objects/Student__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <label>Trainer</label>
    <referenceTo>Trainer__c</referenceTo>
    <relationshipName>Graduates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>