force-app/main/default/objects/Student__c/validationRules/Doctor_fees.validationRule-meta.xml
<ValidationRule>
    <fullName>Doctor_fees</fullName>
    <active>false</active>
    <errorConditionFormula>AND(INCLUDES( Doctor__c , &apos;ENT&apos;),Doctor_fees__c  &gt; 1000)</errorConditionFormula>
    <errorDisplayField>Doctor_fees__c</errorDisplayField>
    <errorMessage>ENT fees less than 1000</errorMessage>
</ValidationRule>