force-app/main/default/objects/Student__c/validationRules/Eligible_To_Vote.validationRule-meta.xml
<ValidationRule>
    <fullName>Eligible_To_Vote</fullName>
    <active>false</active>
    <errorConditionFormula>TODAY() - 6570 &lt;  DOB__c</errorConditionFormula>
    <errorDisplayField>DOB__c</errorDisplayField>
    <errorMessage>Voter must be above 18 years age</errorMessage>
</ValidationRule>