force-app/main/default/objects/Student__c/validationRules/Mobile_Number_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
ISBLANK( Contact_Number__c )
)</errorConditionFormula>
    <errorDisplayField>Contact_Number__c</errorDisplayField>
    <errorMessage>Mobile number should be blank or 10 digits</errorMessage>
</ValidationRule>