force-app/main/default/objects/Student__c/validationRules/Number_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(LEN( Contact_Number__c )  &lt;= 10)</errorConditionFormula>
    <errorDisplayField>Contact_Number__c</errorDisplayField>
    <errorMessage>Mobile number Mandatory</errorMessage>
</ValidationRule>