force-app/main/default/objects/Student__c/validationRules/Pan_Number_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Pan_Number_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
REGEX
(
Pan_Number__c , &quot;[A-Z]{5}[0-9]{4}[A-Z]{1}&quot;
)
)</errorConditionFormula>
    <errorDisplayField>Pan_Number__c</errorDisplayField>
    <errorMessage>Enter Valid Pan Card Number</errorMessage>
</ValidationRule>